ft_containers-unit-test/logs.txt
In file included from ../map_tests/key_redefinition.cpp:2:
../map_tests/__service.ipp:3:10: error: expected "FILENAME" or <FILENAME>
#include MAP
         ^
../map_tests/__service.ipp:19:14: error: use of undeclared identifier 'ft'
void fillMap(_map<T, V, C> &mp) {
             ^
../map_tests/../system/../../config.hpp:22:18: note: expanded from macro '_map'
#define _map                            ft::Map
                                        ^
In file included from ../map_tests/key_redefinition.cpp:2:
../map_tests/__service.ipp:19:6: warning: variable templates are a C++14 extension [-Wc++14-extensions]
void fillMap(_map<T, V, C> &mp) {
     ^
../map_tests/__service.ipp:19:6: error: variable has incomplete type 'void'
../map_tests/__service.ipp:19:19: error: 'T' does not refer to a value
void fillMap(_map<T, V, C> &mp) {
                  ^
../map_tests/__service.ipp:18:17: note: declared here
template <class T, class V, class C>
                ^
../map_tests/__service.ipp:19:22: error: 'V' does not refer to a value
void fillMap(_map<T, V, C> &mp) {
                     ^
../map_tests/__service.ipp:18:26: note: declared here
template <class T, class V, class C>
                         ^
../map_tests/__service.ipp:19:25: error: 'C' does not refer to a value
void fillMap(_map<T, V, C> &mp) {
                        ^
../map_tests/__service.ipp:18:35: note: declared here
template <class T, class V, class C>
                                  ^
../map_tests/__service.ipp:19:29: error: use of undeclared identifier 'mp'
void fillMap(_map<T, V, C> &mp) {
                            ^
../map_tests/__service.ipp:19:32: error: expected ';' at end of declaration
void fillMap(_map<T, V, C> &mp) {
                               ^
                               ;
../map_tests/__service.ipp:19:33: error: expected unqualified-id
void fillMap(_map<T, V, C> &mp) {
                                ^
../map_tests/__service.ipp:35:2: error: use of undeclared identifier 'ft'
        _map<int, int> mp1, mp2, mp3, mp4;
        ^
../map_tests/../system/../../config.hpp:22:18: note: expanded from macro '_map'
#define _map                            ft::Map
                                        ^
In file included from ../map_tests/key_redefinition.cpp:2:
../map_tests/__service.ipp:36:2: error: use of undeclared identifier 'ft'
        _map<string, string> mp5, mp6, mp7, mp8, mp9;
        ^
../map_tests/../system/../../config.hpp:22:18: note: expanded from macro '_map'
#define _map                            ft::Map
                                        ^
In file included from ../map_tests/key_redefinition.cpp:2:
../map_tests/__service.ipp:39:47: error: use of undeclared identifier 'ft'
                m1.insert(std::make_pair(2, 3)); mp1.insert(ft::make_pair(2, 3));
                                                            ^
../map_tests/__service.ipp:40:47: error: use of undeclared identifier 'ft'
                m2.insert(std::make_pair(3, 3)); mp2.insert(ft::make_pair(3, 3));
                                                            ^
../map_tests/__service.ipp:41:47: error: use of undeclared identifier 'ft'
                m3.insert(std::make_pair(3, 4)); mp3.insert(ft::make_pair(3, 4));
                                                            ^
../map_tests/__service.ipp:42:47: error: use of undeclared identifier 'ft'
                m4.insert(std::make_pair(4, 4)); mp4.insert(ft::make_pair(4, 4));
                                                            ^
../map_tests/__service.ipp:43:47: error: use of undeclared identifier 'ft'
                m4.insert(std::make_pair(4, 5)); mp4.insert(ft::make_pair(4, 5));
                                                            ^
../map_tests/__service.ipp:44:55: error: use of undeclared identifier 'ft'
                m5.insert(std::make_pair("123", "123")); mp5.insert(ft::make_pair("123", "123"));
                                                                    ^
../map_tests/__service.ipp:45:55: error: use of undeclared identifier 'ft'
                m6.insert(std::make_pair("123", "124")); mp6.insert(ft::make_pair("123", "124"));
                                                                    ^
../map_tests/__service.ipp:46:55: error: use of undeclared identifier 'ft'
                m7.insert(std::make_pair("124", "123")); mp7.insert(ft::make_pair("124", "123"));
                                                                    ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
1 warning and 20 errors generated.
 macro '_is_integral'
#define _is_integral            ft::is_integral
                                ^
../utilities_tests/is_integral.cpp:21:3: error: use of undeclared identifier 'ft'
        (_is_integral<long long>() == std::is_integral<long long>()) ? 0 : res = 0;
         ^
../utilities_tests/../system/../../config.hpp:24:24: note: expanded from macro '_is_integral'
#define _is_integral            ft::is_integral
                                ^
../utilities_tests/is_integral.cpp:22:3: error: use of undeclared identifier 'ft'
        (_is_integral<unsigned long long>() == std::is_integral<unsigned long long>()) ? 0 : res = 0;
         ^
../utilities_tests/../system/../../config.hpp:24:24: note: expanded from macro '_is_integral'
#define _is_integral            ft::is_integral
                                ^
16 errors generated.
